fix Visualize button and popup visibility

--- a/metsis/metsis_qsearch/css/metsis_res_map.css
+++ b/metsis/metsis_qsearch/css/metsis_res_map.css
@@ -18,6 +18,7 @@
   left: 1em !important;
   bottom: 2em !important;
   top: unset !important;
+  transform: unset !important;
 }
 
 .map-res-table table {
